# Renderline

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md
include/: renderline.h
include/internal/: types.h
include/internal/audio/: audio.h
include/internal/core/: core.h
include/internal/render/: render.h
include/internal/text/: text.h
src/core/: renderline.c  rl_internal.h  rl_menu.c
src/render/: rl_menu.c
src/text/: rl_text.c
